# RacingGuru/internal/controller/handlers/assets/swagger/swagger.yaml
@@ -41,18 +41,24 @@ definitions:
       password:
         example: secret123
         type: string
+    type: object
+  handlers.TeamStatsResponse:
+    properties:
+      team_stats:
+        $ref: '#/definitions/models.TeamStats'
+    type: object
+  handlers.UpdateUserRoleRequest:
+    properties:
+      id:
+        example: 77777777-7777-7777-7777-777777777777
+        type: string
       role:
         allOf:
         - $ref: '#/definitions/models.Role'
         enum:
         - admin
         - user
-        example: user
-    type: object
-  handlers.TeamStatsResponse:
-    properties:
-      team_stats:
-        $ref: '#/definitions/models.TeamStats'
+        example: admin
     type: object
   handlers.tokenS:
     properties:
@@ -799,6 +805,54 @@ paths:
       summary: Create track
       tags:
       - admin
+  /admin/users/role:
+    patch:
+      consumes:
+      - application/json
+      description: Changes another user's role. Only users with role `admin` can call
+        this endpoint.
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: User role update payload
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.UpdateUserRoleRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Update user role
+      tags:
+      - admin
   /change-password:
     post:
       consumes:
@@ -884,8 +938,9 @@ paths:
     post:
       consumes:
       - application/json
+      description: Registers a new user with the default role `user`
       parameters:
-      - description: Registration payload
+      - description: Registration payload without role
         in: body
         name: request
         required: true
@@ -895,7 +950,7 @@ paths:
       - application/json
       responses:
         "201":
-          description: Created
+          description: Registered user with role user
           schema:
             $ref: '#/definitions/models.User'
         "400":
