# RacingGuru/internal/controller/handlers/swagger_types.go
@@ -8,10 +8,14 @@ type LoginRequest struct {
 }
 
 type RegisterRequest struct {
-	Name     string      `json:"name" example:"Max Verstappen"`
-	Email    string      `json:"email" example:"user@example.com"`
-	Password string      `json:"password" example:"secret123"`
-	Role     models.Role `json:"role" enums:"admin,user" example:"user"`
+	Name     string `json:"name" example:"Max Verstappen"`
+	Email    string `json:"email" example:"user@example.com"`
+	Password string `json:"password" example:"secret123"`
+}
+
+type UpdateUserRoleRequest struct {
+	Id   string      `json:"id" example:"77777777-7777-7777-7777-777777777777"`
+	Role models.Role `json:"role" enums:"admin,user" example:"admin"`
 }
 
 type ChangePasswordRequest struct {
